package com.shiryaeva.maze.util;

import java.awt.*;

public class ColorScheme {

    public static final Color EXIT = new Color(210, 150, 120, 150);
    public static final Color ENTRANCE = new Color(168, 193, 172, 150);
    public static final Color DEAD_END = new Color(75, 83, 82, 150);
    public static final Color VISITED = new Color(107, 154, 172, 150);
    public static final Color PATH = new Color(210, 174, 141, 150);
    public static final Color WALL = new Color(111, 49, 60, 150);

    public static final Color EXTRA_LIGHT = new Color(199, 216, 217, 150);
    public static final Color EXTRA_MEDIUM = new Color(150, 187, 200, 150);
    public static final Color EXTRA_DARK = new Color(23, 32, 25, 150);

    public static final Color SHIRE_BACKGROUND = new Color(194, 174, 80);
    public static final Color RIVENDELL_BACKGROUND = new Color(199, 216, 217);
    public static final Color MIRKWOOD_BACKGROUND = new Color(93, 138, 146);
    public static final Color EREBOR_BACKGROUND = new Color(152, 140, 124);


    public static final Color TRANSPARENT = new Color(0, 0, 0, 50);
}
