@startuml

title __6138_SHIRYAEVA_MAZES's Class Diagram__\n

  namespace com.shiryaeva.maze.generator {
    enum GenerationAlgorithm {
    }
  }
  

  namespace com.shiryaeva.maze.generator {
    class com.shiryaeva.maze.generator.KruskalGenerator {
    }
  }
  

  namespace com.shiryaeva.maze.generator {
    class com.shiryaeva.maze.generator.PrimGenerator {
    }
  }
  

  namespace com.shiryaeva.maze.generator {
    class com.shiryaeva.maze.generator.SidewinderGenerator {
    }
  }
  

  namespace com.shiryaeva.maze.gui {
    class com.shiryaeva.maze.gui.Cell {
    }
  }
  

  namespace com.shiryaeva.maze.gui {
    class com.shiryaeva.maze.gui.MainFrame {
    }
  }
  

  namespace com.shiryaeva.maze.gui {
    class com.shiryaeva.maze.gui.MazeGridPanel {
    }
  }
  

  namespace com.shiryaeva.maze.menu {
    class com.shiryaeva.maze.menu.ExtensionFileFilter {
    }
  }
  

  namespace com.shiryaeva.maze.menu {
    class com.shiryaeva.maze.menu.LayoutFileFilter {
    }
  }
  

  namespace com.shiryaeva.maze.menu {
    class com.shiryaeva.maze.menu.WriterReader {
    }
  }
  

  namespace com.shiryaeva.maze.solver {
    class com.shiryaeva.maze.solver.LeeSolver {
    }
  }
  

  namespace com.shiryaeva.maze.solver {
    class com.shiryaeva.maze.solver.OneHandSolver {
    }
  }
  

  namespace com.shiryaeva.maze.solver {
    enum SolvingAlgorithm {
    }
  }
  

  namespace com.shiryaeva.maze.util {
    class com.shiryaeva.maze.util.ColorScheme {
    }
  }
  

  namespace com.shiryaeva.maze.util {
    enum HobbitTheme {
    }
  }
  

  namespace com.shiryaeva.maze.util {
    class com.shiryaeva.maze.util.ImagePanel {
    }
  }
  

  com.shiryaeva.maze.generator.KruskalGenerator o-- com.shiryaeva.maze.gui.Cell : current
  com.shiryaeva.maze.generator.KruskalGenerator o-- com.shiryaeva.maze.generator.KruskalGenerator.DisjointSets : disjointSet
  com.shiryaeva.maze.generator.PrimGenerator o-- com.shiryaeva.maze.gui.Cell : current
  com.shiryaeva.maze.generator.PrimGenerator o-- com.shiryaeva.maze.gui.Cell : start
  com.shiryaeva.maze.generator.SidewinderGenerator o-- com.shiryaeva.maze.gui.Cell : current
  com.shiryaeva.maze.gui.Cell .up.|> java.io.Serializable
  com.shiryaeva.maze.gui.Cell o-- com.shiryaeva.maze.gui.Cell : parent
  com.shiryaeva.maze.gui.MainFrame o-- com.shiryaeva.maze.gui.MazeGridPanel : grid
  com.shiryaeva.maze.gui.MainFrame o-- com.shiryaeva.maze.util.ImagePanel : mazeBorder
  com.shiryaeva.maze.gui.MazeGridPanel .up.|> java.awt.event.KeyListener
  com.shiryaeva.maze.gui.MazeGridPanel .up.|> java.awt.event.MouseListener
  com.shiryaeva.maze.gui.MazeGridPanel .up.|> java.io.Serializable
  com.shiryaeva.maze.gui.MazeGridPanel -up-|> javax.swing.JPanel
  com.shiryaeva.maze.gui.MazeGridPanel o-- com.shiryaeva.maze.gui.Cell : goal
  com.shiryaeva.maze.gui.MazeGridPanel o-- com.shiryaeva.maze.gui.Cell : manualCurrent
  com.shiryaeva.maze.gui.MazeGridPanel o-- com.shiryaeva.maze.gui.Cell : start
  com.shiryaeva.maze.menu.ExtensionFileFilter -up-|> javax.swing.filechooser.FileFilter
  com.shiryaeva.maze.menu.ExtensionFileFilter o-- com.shiryaeva.maze.menu.LayoutFileFilter : filter
  com.shiryaeva.maze.solver.LeeSolver o-- com.shiryaeva.maze.gui.Cell : current
  com.shiryaeva.maze.solver.LeeSolver o-- com.shiryaeva.maze.gui.Cell : goal
  com.shiryaeva.maze.solver.LeeSolver o-- com.shiryaeva.maze.gui.Cell : start
  com.shiryaeva.maze.solver.OneHandSolver o-- com.shiryaeva.maze.gui.Cell : current1
  com.shiryaeva.maze.solver.OneHandSolver o-- com.shiryaeva.maze.gui.Cell : current2
  com.shiryaeva.maze.util.ImagePanel -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
